# posthoc_learn

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
scripts/: consolidate_dataset.py  run_dataset_experiment.py  run_mnist_experiment.py  run_regret_experiment.py  run_ros_server.py  run_toy_experiment.py  test_ros_server.py
src/posthoc_learn/: algoserver.py  banalg.py  conban_dataset.py  haptic.py  util.py
src/posthoc_learn/config/: posthoc_config.py
srv/: GetAction.srv  PublishLoss.srv
